feature: get all users location